src/styles/components/NavBar.scss
@use '../utils/' as *;


.NavBar {
    position: fixed;

    display: flex;
    align-items: center;

    width: 100%;
    max-width: 720px;
    height: $navbar-heigh;
    border-bottom: 1.5px solid rgb(55, 76, 47);

    background-color: $clr-primary;
    box-shadow: 0px 6px 5px -5px rgba(59, 57, 57, 0.5);


    p {
        width: 100%;

        color: white;
        text-align: center;
        font-size: clamp(1.5rem, 2vw, 2rem);
        font-weight: 700;
    }
}

